# book-extractor

./: .gitignore  PDF_to_JSON_Chapter_Extractor.ipynb  README.md  create_chapter_payloads_from_pdf.py  create_page_splits_from_pdf.py  create_pages_folder_from_pdf.py  extract_goodreads_popular_books_authors.py  pyproject.toml  test.ipynb
data/: 1626813582_autosplits.json  9354990517_autosplits.json  9354990517_page_metadata.json  Converted_Le Petit Prince - Antoine de Saint-Exupéry_autosplits.json  Le Petit Prince - Antoine de Saint-Exupéry - EPUB.epub  goodreads_books_2023_1.csv  goodreads_books_2023_10.csv  goodreads_books_2023_11.csv  goodreads_books_2023_12.csv  goodreads_books_2023_2.csv  goodreads_books_2023_3.csv  goodreads_books_2023_4.csv  goodreads_books_2023_5.csv  goodreads_books_2023_6.csv  goodreads_books_2023_7.csv  goodreads_books_2023_8.csv  goodreads_books_2023_9.csv
notebooks/: CHAPTER_EXTRACTS_to_30_MINUTE_READ.ipynb  CHAPTER_EXTRACTS_to_KEY_TAKEAWAYS.ipynb  EPUB_to_PDF.ipynb  ISBN_to_ONE_PAGER.ipynb  PDF_to_CHAPTER_EXTRACTS.ipynb
