[tool.poetry]
name = "book-extractor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.9.2"
requests = "^2.23.0"
pypdf2 = "3.0.1"
setuptools = ">=68.2.0,<68.3.0"
wheel = ">=0.41.2,<0.42.0"
pip = ">=23.2.1,<23.3.0"
typing-extensions = "4.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
